# security-automation-tools

./: .gitignore  PortScanner_Notes  README.md  port_scanner.py  suspicious_keywords.txt  system_log_2025-05-20_13-13-05.txt  system_logger.py  system_logger_notes.md  test.py
.github/workflows/: ioc-toolkit-ci.yml
alert-triage-agent/: README.md  pyproject.toml  requirements.txt
alert-triage-agent/rules/: default_rules.yaml
alert-triage-agent/src/triage_agent/: __init__.py  cli.py  models.py  parser.py  pipeline.py  rules.py  summarizer.py
alert-triage-agent/tests/: test_cli.py  test_parser.py  test_pipeline.py  test_rules.py
ioc-toolkit/: README.md  pyproject.toml
ioc-toolkit/examples/: sample_report.txt
ioc-toolkit/src/ioc_toolkit/: __init__.py  cli.py  defang.py  enrichment.py  extractor.py  summarizer.py
ioc-toolkit/tests/: test_cli.py  test_defang.py  test_enrichment.py  test_extractor.py  test_summarizer.py
ioc-triage-assistant/: README.md  pyproject.toml
ioc-triage-assistant/data/: known_malicious_indicators.json  mitre_attack_techniques.json
ioc-triage-assistant/examples/: sample_alert.txt
ioc-triage-assistant/ioc_triage/: __init__.py  cli.py  enrichment.py  extractor.py  knowledge_base.py  llm_client.py  triage.py
ioc-triage-assistant/tests/: test_cli.py  test_enrichment.py  test_extractor.py  test_knowledge_base.py  test_llm_client.py  test_triage.py
ir-agent/: README.md  pyproject.toml
ir-agent/data/: known_malicious_indicators.json  mitre_attack_techniques.json
ir-agent/examples/: sample_incident.txt
ir-agent/ir_agent/: __init__.py  agent.py  cli.py  report.py  schemas.py
ir-agent/ir_agent/tools/: __init__.py  enrichment.py  ioc_extraction.py  log_analysis.py  mitre_mapping.py
ir-agent/tests/: test_agent_live_mocked.py  test_agent_offline.py  test_cli.py  test_enrichment.py  test_ioc_extraction.py  test_log_analysis.py  test_mitre_mapping.py  test_report.py
log-sentinel/: README.md  pyproject.toml
log-sentinel/data/: mitre_attack_kb.json
log-sentinel/log_sentinel/: __init__.py  cli.py  detectors.py  knowledge_base.py  models.py  parser.py  triage.py
log-sentinel/src/log_sentinel/: __init__.py  cli.py  detector.py  parser.py  report.py
log-sentinel/tests/: test_cli.py  test_detector.py  test_detectors.py  test_knowledge_base.py  test_parser.py  test_report.py  test_triage.py
log-triage-agent/: README.md  requirements.txt
log-triage-agent/data/: attack_techniques.json
log-triage-agent/log_triage_agent/: __init__.py  cli.py  detectors.py  knowledge_base.py  models.py  parsers.py  reporter.py
log-triage-agent/src/log_triage_agent/: __init__.py  cli.py  detectors.py  ioc.py  models.py  parser.py  report.py  triage_agent.py
log-triage-agent/tests/: test_cli.py  test_cli_integration.py  test_detectors.py  test_ioc.py  test_knowledge_base.py  test_parser.py  test_parsers.py  test_reporter.py  test_triage_agent.py
log-triage-ai/: README.md
log-triage-ai/logtriage/: __init__.py  cli.py  detectors.py  ioc.py  models.py  parser.py  triage.py
log-triage-ai/tests/: test_cli.py  test_detectors.py  test_ioc.py  test_parser.py  test_triage.py
log-triage-assistant/: README.md  pyproject.toml
log-triage-assistant/logtriage/: __init__.py  cli.py  detectors.py  llm_summarizer.py  parser.py  report.py  scoring.py
log-triage-assistant/tests/: test_cli.py  test_detectors.py  test_llm_summarizer.py  test_parser.py  test_report.py  test_scoring.py
phishing-email-analyzer/: README.md  pyproject.toml
phishing-email-analyzer/data/: known_brands.json
phishing-email-analyzer/phishtriage/: auth.py  cli.py  heuristics.py  llm_summarizer.py  parser.py  report.py  scoring.py
phishing-email-analyzer/tests/: test_auth.py  test_cli.py  test_heuristics.py  test_llm_summarizer.py  test_parser.py  test_report.py  test_scoring.py
phishing-email-analyzer/tests/fixtures/: clean_newsletter.eml  phishing_paypal.eml
process_threat_hunter/: .gitignore  README.md
process_threat_hunter/hunter/: __init__.py  baseline.py  cli.py  report.py  rules.py  scanner.py
process_threat_hunter/rules/: default_rules.yaml
process_threat_hunter/tests/: test_baseline.py  test_cli.py  test_report.py  test_rules.py  test_scanner.py
secret-scanner/: .gitignore  .secretscan-baseline.json  README.md  pyproject.toml
secret-scanner/examples/: README.md  generate_demo.py  sample_leaky_file.py
secret-scanner/rules/: default_rules.yaml
secret-scanner/secretscan/: __init__.py  baseline.py  cli.py  models.py  report.py  rules.py  scanner.py
secret-scanner/secretscanner/: __init__.py  baseline.py  cli.py  entropy.py  report.py  rules.py  scanner.py
secret-scanner/tests/: sample_secrets.py  test_baseline.py  test_cli.py  test_entropy.py  test_git_history.py  test_report.py  test_rules.py  test_scanner.py
soc-alert-triage/: .gitignore  README.md  requirements.txt
soc-alert-triage/data/: attack_techniques.json  sample_alerts.json
soc-alert-triage/soc_triage/: __init__.py  cli.py  knowledge_base.py  llm_backend.py  models.py  retriever.py  scoring.py  triage.py  vectorizer.py
soc-alert-triage/tests/: conftest.py  test_retriever.py  test_scoring.py  test_triage.py  test_vectorizer.py
websec-posture-scanner/: README.md  pyproject.toml
websec-posture-scanner/tests/: test_cli.py  test_cookies.py  test_cors.py  test_disclosure.py  test_fetcher.py  test_grading.py  test_headers.py  test_report.py  test_tls.py
websec-posture-scanner/webscan/: __init__.py  cli.py  fetcher.py  grading.py  models.py  report.py
websec-posture-scanner/webscan/checks/: __init__.py  cookies.py  cors.py  disclosure.py  headers.py  tls.py
