[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-triage-agent"
version = "0.1.0"
description = "Rule-based log triage engine (MITRE ATT&CK-mapped) with optional LLM-generated incident summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
dev = ["pytest>=7.0"]

[project.scripts]
triage-agent = "triage_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
