[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ioc-toolkit"
version = "0.1.0"
description = "Extract IOCs, map offensive tooling to MITRE ATT&CK, and triage threat reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dev = ["pytest>=7.0"]

[project.scripts]
ioc-toolkit = "ioc_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
