[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "log-sentinel"
version = "0.1.0"
description = "Rule-based SSH log detection with LLM-assisted, ATT&CK-grounded alert triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["log_sentinel*"]
