[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logtriage"
version = "0.1.0"
description = "Parse auth logs, detect intrusion patterns, and generate LLM-assisted incident triage reports."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
llm = ["anthropic>=0.30.0"]
dev = ["pytest>=7.0"]

[project.scripts]
logtriage = "logtriage.cli:main"

[tool.setuptools.packages.find]
include = ["logtriage*"]
