[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secretscan"
version = "0.1.0"
description = "Offline secret/credential leak scanner for files and full git history."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
secretscan = "secretscan.cli:main"

[tool.setuptools.packages.find]
include = ["secretscan*"]
